--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "wikds-wiki",
+  "name": "wilds-wiki",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://aristosptolemy.github.io/Wilds-wiki",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "deploy": "gh-pages -d build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -25,6 +27,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
